# sophon

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  verify_imports.py
knowledge-grid/: A1_逻辑判断.md  A2_智慧模块.md  A3_论证审核.md  A4_判断决策.md  A5_五层架构.md  A6_核心执行链.md  A7_感知记忆.md  A8_反思进化.md  B1_互联网用户增长.md  B2_直播运营.md  B3_私域运营.md  B4_活动策划.md  B5_会员运营.md  B6_广告策划.md  B7_地产策划.md  B8_招商策划.md  B9_策略运营.md  C1_电商运营.md  C2_数据运营.md  C3_内容营销.md  C4_广告投放.md  INDEX.md  README.md  __init__.py  cell_engine.py  cli.py  fusion_engine.py  method_checker.py  neural_integration.py  pyproject.toml  reasoning_enhancer.py  test_system.py
knowledge-grid/configs/: 知识格子.yaml
knowledge-grid/tests/: __init__.py  test_knowledge_grid.py
memory-core/: LICENSE  README.md  __init__.py  _roi_analysis.py  _roi_calculation.py  _roi_collection.py  _roi_storage.py  _roi_utils.py  _wisdom_data.py  adaptive_strategy_engine.py  browser_automation_learning.py  browser_learning.py  daily_learning.py  dynamic_strategy_engine.py  encoding_subsystems.py  encoding_types.py  enhanced_three_tier_learning.py  feedback_integration.py  feedback_pipeline.py  firing_rate_attention.py  hebbian_learning_engine.py  information_theory_retrieval.py  integrated_learning.py  intelligent_parameter_system.py  knowledge_engine.py  learning_engine.py  learning_pipeline.py  learning_scheduler.py  logic_integration.py  memory_encoding_system_v3.py  memory_engine.py  memory_engine_v2.py  memory_lifecycle_manager.py  memory_types.py  multi_user_engine.py  neural_encoding_core.py  neural_memory_system_v3.py  neural_system.py  neuroscience_memory_enhancer.py  pyproject.toml  (+19 more)
memory-core/learning/: LE_20260403233535.yaml
memory-core/learning_strategies/: __init__.py  base_strategy.py  daily_strategy.py  data_scanner.py  enhanced_strategy.py  feedback_strategy.py  solution_strategy.py  three_tier_strategy.py
memory-core/tests/: __init__.py  test_memory_core.py
reasoning-mind/: README.md  __init__.py  _consulting_reasoning.py  _deep_reasoning_constants.py  _deep_reasoning_memory.py  _deep_reasoning_subsystems.py  _deep_reasoning_types.py  _got_engine.py  _long_cot_engine.py  _narrative_reasoning.py  _react_engine.py  _react_extended_tools.py  _tot_engine.py  _yinyang_reasoning.py  deep_reasoning_engine.py  dewey_thinking_engine.py  geodesic_reasoning_engine.py  phase_synchronization_coordinator.py  pyproject.toml  reasoning_memory.py  reverse_thinking_engine.py  sequence_reasoning_engine.py  strategic_reasoning_engine.py  yangming_reasoning_engine.py
reasoning-mind/deep_reasoning_engine/: __init__.py  _dre_base.py  _dre_constants.py  _dre_dewey.py  _dre_neuro.py  _dre_top.py  _dre_types.py  _dre_xinmind.py
reasoning-mind/dispatcher/: __init__.py  wisdom_dispatcher.py  wisdom_fusion_core.py
reasoning-mind/dispatcher/wisdom_dispatch/: __init__.py  _daqin_metrics.py  _decision_congress.py  _dispatch_agents.py  _dispatch_claw.py  _dispatch_collaboration.py  _dispatch_court.py  _dispatch_enums.py  _dispatch_fusion.py  _dispatch_mapping.py  _dispatch_matrix_data.py  _dispatch_recommend.py  _dispatch_utils.py  _dynamic_department_matrix.py  _hanlin_review.py  _imperial_library.py  _library_bridge.py  _library_knowledge_bridge.py  _library_upgrade_center.py  _mesh_routing_v5.py  _whip_engine.py
reasoning-mind/dispatcher/wisdom_fusion/: __init__.py  _fusion_conflict.py  _fusion_core_execute.py  _fusion_core_init.py  _fusion_enums.py
reasoning-mind/engines/: __init__.py  _common_enums.py  _cv_antipattern.py  _cv_core.py  _cv_reasoning.py  _cv_research.py  _cv_scorer.py  _cv_types.py  _cwc_analytics.py  _cwc_analyzer.py  _cwc_engine.py  _cwc_honglou.py  _cwc_relations.py  _cwc_sanguo.py  _cwc_shuihu.py  _cwc_team.py  _cwc_types.py  _cwc_xiyou.py  _extract_task_configs.py  _nie_advisor.py  _nie_analyzer.py  _nie_persona.py  _nie_types.py  _reformers_data.py  _research_strategy_engine.py  _super_neural_memory.py  _super_wisdom_engine.py  _verify_configs.py  ai_native_growth_strategies.py  ancient_wisdom_fusion_core.py  anthropology_wisdom.py  anthropology_wisdom_engine.py  behavior_shaping_engine.py  behavioral_economics_wisdom.py  buddha_wisdom_core.py  buddhism_deep_core.py  chinese_consumer_culture_engine.py  civilization_war_economy_core.py  civilization_wisdom_core.py  classic_wisdom_core.py  (+111 more)
reasoning-mind/engines/ai_native_growth/: __init__.py  _aing_attribution.py  _aing_compound.py  _aing_data_flywheel.py  _aing_engine.py  _aing_enums.py  _aing_experiment.py  _aing_network.py  _aing_stats.py
reasoning-mind/engines/cloning/: __init__.py  _cloning_base.py  _cloning_registry.py  _cloning_types.py  _court_positions.py  _sage_proxy_factory.py  _sage_proxy_generator.py  _sage_registry_extra.py  _sage_registry_full.py  court_enums.py  court_helpers.py  court_models.py  positions_chuangxin.py  positions_congress.py  positions_economy.py  positions_library.py  positions_military.py  positions_review.py  positions_royal.py  positions_specialist.py  positions_standard.py  positions_supplement.py  positions_wenzhi.py
reasoning-mind/engines/cross_scale_thinking/: __init__.py  _cste_data.py  _cste_dataclasses.py  _cste_enums.py
reasoning-mind/engines/cross_scale_thinking_engine/: __init__.py  _cst_analyzer.py  _cst_constants.py  _cst_core.py  _cst_strategy.py  _cst_synthesizer.py  _cst_types.py
reasoning-mind/engines/dao_wisdom/: __init__.py  _dao_comprehensive.py  _dao_enums.py  _dao_v2.py  _dao_yin_yang.py
reasoning-mind/engines/data/: research_strategy_data.json  task_executor_configs.json
reasoning-mind/engines/literary/: __init__.py  poet_bai_jv_yi_engine.py  poet_cen_shen_engine.py  poet_du_fu_engine.py  poet_du_mu_engine.py  poet_fan_zhong_yan_engine.py  poet_gao_shi_engine.py  poet_han_yu_engine.py  poet_huang_ting_jian_engine.py  poet_jia_dao_engine.py  poet_jiang_jie_engine.py  poet_jiang_kui_engine.py  poet_li_bai_engine.py  poet_li_he_engine.py  (+37 more)
reasoning-mind/tests/: __init__.py  test_reasoning_mind.py
reasoning-mind/wisdom_encoding/: __init__.py  wisdom_encoding_registry.py
(+170 files in other folders)
