[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge-grid"
version = "6.2.0"
description = "Dynamic Knowledge Grid Engine - Adaptive knowledge node connection like a brain"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Sophon Team", email = "team@sophon.ai"}
]
keywords = ["knowledge", "ai", "cognitive", "knowledge-graph", "knowledge-fusion", "cognitive-architecture", "agent-framework", "cell-engine"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/sophon-ai/knowledge-grid"
Documentation = "https://github.com/sophon-ai/knowledge-grid#readme"
Repository = "https://github.com/sophon-ai/knowledge-grid"

[tool.setuptools.packages.find]
where = ["."]
include = ["knowledge_grid*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
