[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-core"
version = "6.2.0"
description = "Three-tier Memory Architecture - Sensory/Short-term/Long-term neural memory simulation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Sophon Team", email = "team@sophon.ai"}
]
keywords = ["memory", "ai", "neural", "learning", "cognition"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pyyaml>=6.0",
    "loguru>=0.7.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/sophon-ai/memory-core"
Documentation = "https://github.com/sophon-ai/memory-core#readme"
Repository = "https://github.com/sophon-ai/memory-core"

[tool.setuptools.packages.find]
where = ["."]
include = ["memory_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"