[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reasoning-mind"
version = "6.2.0"
description = "Multi-paradigm Reasoning Engine - Integrating ancient and modern wisdom"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Sophon Team", email = "team@sophon.ai"}
]
keywords = ["reasoning", "ai", "wisdom", "cognition", "strategy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pyyaml>=6.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/sophon-ai/reasoning-mind"
Documentation = "https://github.com/sophon-ai/reasoning-mind#readme"
Repository = "https://github.com/sophon-ai/reasoning-mind"

[tool.setuptools.packages.find]
where = ["."]
include = ["reasoning_mind*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
